--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -29,12 +29,7 @@
     justify-content: center;
 }
 
-#news1Img {
-    width: 100%;
-    border-radius: 1rem;
-}
-
-#news2Img {
+.newsImg {
     width: 100%;
     border-radius: 1rem;
 }
