--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-html, body {
-    height: 100%;
-    width: 100%;
+html, body, #root {
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
     font-family: Roboto;
