--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -80,6 +80,7 @@
     align-items: center;
     position: absolute;
     right: 0;
+    z-index: 4;
     top: -19rem;
     background-color: var(--secondary);
     width: 100%;
