--- a/zoo-frontend/src/components/header/header.css
+++ b/zoo-frontend/src/components/header/header.css
@@ -80,6 +80,7 @@
     align-items: center;
     position: absolute;
     right: 0;
+    z-index: 4;
     top: -19rem;
     z-index: 1000;
     background-color: var(--secondary);
